[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "thorlabs_apt_protocol"
dist-name = "thorlabs-apt-protocol"
author = "cheesemid"
author-email = "cheesemid@protonmail.com"
home-page = "https://github.com/cheesemid/thorlabs-apt-protocol"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: Version 1.0",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Linux",
]
